--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">My Portfolio</a></li>
-							<li><a href="generic.html">About Me</a></li>
-							<li><a href="elements.html">Blog Link</a></li>
+							<li class="active"><a href="index.html">About Me</a></li>
+							<li><a href="generic.html">Projects</a></li>
+							<li><a href="elements.html">Resume</a></li>
+							<li><a href="elements.html">Blog</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -62,7 +63,7 @@
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+							<!--<section class="posts">
 								<article>
 									<header>
 										<h2><a href="#">Pinata Duel App</a></h2>
@@ -105,7 +106,7 @@
 									</ul>
 								</article>
 								
-							</section>
+							</section>-->
 
 						<!-- Footer -->
 							<footer>
