--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">About Me</a></h2>
-									<p>My name is Edward and I am a free lance Full-stack web developer, rugby coach and player.</p>
+									<h2><a href="#">Edward S. Cook</a></h2>
+									<p>Freelance Full-stack web developer, rugby coach and player.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
