--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Edward Cook</h1>
-						<p>Full-stack web developer, Rugby Player and Coach, Husband and Father</p>
+						<!--<h1>Edward Cook</h1>
+						<p>Full-stack web developer, Rugby Player and Coach, Husband and Father</p>-->
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="Mylogo.png" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
@@ -53,8 +53,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Edward S. Cook</a></h2>
-									<p>Freelance Full-stack web developer, rugby coach and player.</p>
+									<h2><a href="#">Edward S Cook</a></h2>
+									<p>Full-stack web developer, Rugby Player and Coach, Husband and Father.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
