--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 					<div id="intro">
 						<!--<h1>Edward Cook</h1>
 						<p>Full-stack web developer, Rugby Player and Coach, Husband and Father</p>-->
-						<ul class="actions">
+						<br>
+						<h1>Edward Cook</h1>
+						<!--<ul class="actions">
 							<li><a href="Mylogo.png" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						</ul>-->
 					</div>
 
 				<!-- Header -->
@@ -53,7 +55,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Edward S Cook</a></h2>
+									<!--<h2><a href="#">Edward S Cook</a></h2>-->
 									<p>Full-stack web developer, Rugby Player and Coach, Husband and Father.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
