random string change intro

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!--<h2><a href="#">Edward S Cook</a></h2>-->
-									<p>Full-stack web developer, Rugby Player and Coach, Husband and Father.</p>
+									<p>Full-Stack Web Developer, Husband, Father, Rugby Coach, and World Traveler.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
